--- a/Resume/index.html
+++ b/Resume/index.html
@@ -23,55 +23,38 @@
                     </div>
                 </div>
                 <h1 class="header-title">Heather Hubbard</h1>
-                <h2 class="header-subtitle">SDET, Automation Enthusiast</h2>
+                <h2 class="header-subtitle">Software Test Engineer</h2>
                 <p class="header-description">Ensuring quality in software through agile methodologies, continuous improvement, and automation.</p>
                 <hr>
-                <div class="header-buttons">
-                    <a href="https://www.linkedin.com/in/scottishred/">
-                        <i class="fab fa-linkedin fa-2x" aria-hidden="true"></i>
-                        <span class="visually-hidden">LinkedIn</span>
-                    </a>
-                    <a href="mailto: scottish.red.heather@gmail.com">
-                        <i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i>
-                        <span class="visually-hidden">Email Heather Hubbard</span>
-                    </a>
-                    <a href="https://www.github.com/users/Scottish-Red">
-                        <i class="fab fa-github fa-2x" aria-hidden="true"></i>
-                        <span class="visually-hidden">GitHub</span>
-                    </a>
-                    <a href="https://www.GitLab.com/scottish.red.heather">
-                        <i class="fab fa-gitlab fa-2x" aria-hidden="true"></i>
-                        <span class="visually-hidden">GitLab</span>
-                    </a>
-                </div>
-            </section>
+                    <div class="header-buttons">
+                        <a href="https://www.linkedin.com/in/scottishred/">
+                            <i class="fab fa-linkedin fa-2x" aria-hidden="true"></i>
+                            <span class="visually-hidden">LinkedIn</span>
+                        </a>
+                        <a href="mailto: scottish.red.heather@gmail.com">
+                            <i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i>
+                            <span class="visually-hidden">Email Heather Hubbard</span>
+                        </a>
+                        <a href="https://github.com/Scottish-Red">
+                            <i class="fab fa-github fa-2x" aria-hidden="true"></i>
+                            <span class="visually-hidden">GitHub</span>
+                        </a>
+                    </div>
+                </section>
             <hr>
             <div class="skills">
                 <p><strong>Core Competencies:</strong></p>
 
-                <span class="tag-cloud">Python</span>
-                <span class="tag-cloud">HTML</span>
-                <span class="tag-cloud">C#</span>
-                <span class="tag-cloud">Ollama</span>
-                <span class="tag-cloud">CSS</span>
-                <span class="tag-cloud">JavaScript</span>
-                <span class="tag-cloud">Node</span>
-                <span class="tag-cloud">npm</span>
-                <span class="tag-cloud">SQL</span>
-                <span class="tag-cloud">graphQL</span>
-                <span class="tag-cloud">Git</span>
-                <span class="tag-cloud">GitHub</span>
-                <span class="tag-cloud">GitLab</span>
-                <span class="tag-cloud">Playwright</span>
-                <span class="tag-cloud">Selenium</span>
-                <span class="tag-cloud">Appium</span>
-                <span class="tag-cloud">Jira</span>
-                <span class="tag-cloud">Confluence</span>
-                <span class="tag-cloud">Qase</span>
-                <span class="tag-cloud">VS Code</span>
-                <span class="tag-cloud">Altair</span>
-                <span class="tag-cloud">Insomnia</span>
-                <span class="tag-cloud">Postman</span>
+                <span class="tag-cloud">Manual Testing & Test Case Design (Qase)</span>
+                <span class="tag-cloud">Automated Testing (Playwright, Selenium, Appium)</span>
+                <span class="tag-cloud">API Testing & Integration (GraphQL)</span>
+                <span class="tag-cloud">Bug Tracking & Defect Resolution (Jira)</span>
+                <span class="tag-cloud">CI/CD Pipelines (GitHub Actions)</span>
+                <span class="tag-cloud">SQL & Relational Databases (MongoDB, PostgreSQL)</span>
+                <span class="tag-cloud">Agile Testing Methodologies</span>
+                <span class="tag-cloud">Cross-functional Collaboration</span>
+                <span class="tag-cloud">Documentation and Process Mapping (Miro)</span>
+                <span class="tag-cloud">Software & Web Development (Python, JavaScript, React)</span>
             </div>
             <hr>
             <div class="education">
@@ -132,5 +115,6 @@
     </body>
 
     <footer><div></div></footer>
+
 
 </html>
