Updated index part 2.html
Changed the tag-cloud list of skills to ul/li standard

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -44,17 +44,18 @@
             <hr>
             <div class="skills">
                 <p><strong>Core Competencies:</strong></p>
-
-                <span class="tag-cloud">Manual Testing & Test Case Design (Qase)</span>
-                <span class="tag-cloud">Automated Testing (Playwright, Selenium, Appium)</span>
-                <span class="tag-cloud">API Testing & Integration (GraphQL)</span>
-                <span class="tag-cloud">Bug Tracking & Defect Resolution (Jira)</span>
-                <span class="tag-cloud">CI/CD Pipelines (GitHub Actions)</span>
-                <span class="tag-cloud">SQL & Relational Databases (MongoDB, PostgreSQL)</span>
-                <span class="tag-cloud">Agile Testing Methodologies</span>
-                <span class="tag-cloud">Cross-functional Collaboration</span>
-                <span class="tag-cloud">Documentation and Process Mapping (Miro)</span>
-                <span class="tag-cloud">Software & Web Development (Python, JavaScript, React)</span>
+                <ul>
+                    <li>Manual Testing & Test Case Design (Qase)</li>
+                    <li>Automated Testing (Playwright, Selenium, Appium)</li>
+                    <li>API Testing & Integration (GraphQL)</li>
+                    <li>Bug Tracking & Defect Resolution (Jira)</li>
+                    <li>CI/CD Pipelines (GitHub Actions)</li>
+                    <li>SQL & Relational Databases (MongoDB, PostgreSQL)</li>
+                    <li>Agile Testing Methodologies</li>
+                    <li>Cross-functional Collaboration</li>
+                    <li>Documentation and Process Mapping (Miro)</li>
+                    <li>Software & Web Development (Python, JavaScript, React)</li>
+                </ul>
             </div>
             <hr>
             <div class="education">
@@ -118,3 +119,4 @@
 
 
 </html>
+
