Fixed main header

--- a/index.html
+++ b/index.html
@@ -15,32 +15,32 @@
     <body>
         <div class="flex-container">
 
-            <!-- Header Section -->
+            <!-- Header Section-->
             <section class="header-section">
                 <div class="header-content">
                     <div class="header-avatar">
-                        <img src="./Assets/images/Me.jpg" alt="Picture of Heather Hubbard" class="profile-image">
+                        <img src="../Assets/images/Me.jpg" alt="Picture of Heather Hubbard" class="profile-image">
                     </div>
                 </div>
                 <h1 class="header-title">Heather Hubbard</h1>
-                <h2 class="header-subtitle">SDET<br>Automation Enthusiast</h2>
+                <h2 class="header-subtitle">Software Test Engineer</h2>
                 <p class="header-description">Ensuring quality in software through agile methodologies, continuous improvement, and automation.</p>
                 <hr>
-                <div class="header-buttons">
-                    <a href="https://www.linkedin.com/in/scottishred/">
-                        <i class="fab fa-linkedin fa-2x" aria-hidden="true"></i>
-                        <span class="visually-hidden">LinkedIn</span>
-                    </a>
-                    <a href="mailto: scottish.red.heather@gmail.com">
-                        <i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i>
-                        <span class="visually-hidden">Email Heather Hubbard</span>
-                    </a>
-                    <a href="https://www.github.com/users/Scottish-Red">
-                        <i class="fab fa-github fa-2x" aria-hidden="true"></i>
-                        <span class="visually-hidden">GitHub</span>
-                    </a>
-                </div>
-            </section>
+                    <div class="header-buttons">
+                        <a href="https://www.linkedin.com/in/scottishred/">
+                            <i class="fab fa-linkedin fa-2x" aria-hidden="true"></i>
+                            <span class="visually-hidden">LinkedIn</span>
+                        </a>
+                        <a href="mailto: scottish.red.heather@gmail.com">
+                            <i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i>
+                            <span class="visually-hidden">Email Heather Hubbard</span>
+                        </a>
+                        <a href="https://github.com/Scottish-Red">
+                            <i class="fab fa-github fa-2x" aria-hidden="true"></i>
+                            <span class="visually-hidden">GitHub</span>
+                        </a>
+                    </div>
+                </section>
             <hr>
             <div class="projects">
                 <p><strong>Projects</strong></p>
@@ -57,5 +57,6 @@
     </body>
 
     <footer><div></div></footer>
+
 
 </html>
