--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <section class="header-section">
                 <div class="header-content">
                     <div class="header-avatar">
-                        <img src="../Assets/images/Me.jpg" alt="Picture of Heather Hubbard" class="profile-image">
+                        <img src="./Assets/images/Me.jpg" alt="Picture of Heather Hubbard" class="profile-image">
                     </div>
                 </div>
                 <h1 class="header-title">Heather Hubbard</h1>
@@ -60,3 +60,4 @@
 
 
 </html>
+
